// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/radio/demo/basic.md correctly 1`] = `
<label
  class="wmstool-radio-wrapper"
>
  <span
    class="wmstool-radio"
  >
    <input
      class="wmstool-radio-input"
      type="radio"
    />
    <span
      class="wmstool-radio-inner"
    />
  </span>
  <span>
    Radio
  </span>
</label>
`;

exports[`renders ./components/radio/demo/disable.md correctly 1`] = `
<div>
  <label
    class="wmstool-radio-wrapper wmstool-radio-wrapper-disabled"
  >
    <span
      class="wmstool-radio wmstool-radio-disabled"
    >
      <input
        class="wmstool-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <br />
  <label
    class="wmstool-radio-wrapper wmstool-radio-wrapper-disabled"
  >
    <span
      class="wmstool-radio wmstool-radio-checked wmstool-radio-disabled"
    >
      <input
        checked=""
        class="wmstool-radio-input"
        disabled=""
        type="radio"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      Disabled
    </span>
  </label>
  <div
    style="margin-top:20px"
  >
    <button
      class="wmstool-btn wmstool-btn-primary"
      type="button"
    >
      <span>
        Toggle disabled
      </span>
    </button>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiobutton.md correctly 1`] = `
<div>
  <div>
    <div
      class="wmstool-radio-group"
    >
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-checked"
        >
          <input
            checked=""
            class="wmstool-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="wmstool-radio-group"
    >
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-checked"
        >
          <input
            checked=""
            class="wmstool-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-disabled"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-disabled"
        >
          <input
            class="wmstool-radio-button-input"
            disabled=""
            type="radio"
            value="b"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="wmstool-radio-group"
    >
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked wmstool-radio-button-wrapper-disabled"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-checked wmstool-radio-button-disabled"
        >
          <input
            checked=""
            class="wmstool-radio-button-input"
            disabled=""
            type="radio"
            value="a"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-disabled"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-disabled"
        >
          <input
            class="wmstool-radio-button-input"
            disabled=""
            type="radio"
            value="b"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-disabled"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-disabled"
        >
          <input
            class="wmstool-radio-button-input"
            disabled=""
            type="radio"
            value="c"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-disabled"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-disabled"
        >
          <input
            class="wmstool-radio-button-input"
            disabled=""
            type="radio"
            value="d"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup.md correctly 1`] = `
<div
  class="wmstool-radio-group"
>
  <label
    class="wmstool-radio-wrapper wmstool-radio-wrapper-checked"
  >
    <span
      class="wmstool-radio wmstool-radio-checked"
    >
      <input
        checked=""
        class="wmstool-radio-input"
        type="radio"
        value="1"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="wmstool-radio-wrapper"
  >
    <span
      class="wmstool-radio"
    >
      <input
        class="wmstool-radio-input"
        type="radio"
        value="2"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="wmstool-radio-wrapper"
  >
    <span
      class="wmstool-radio"
    >
      <input
        class="wmstool-radio-input"
        type="radio"
        value="3"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="wmstool-radio-wrapper"
  >
    <span
      class="wmstool-radio"
    >
      <input
        class="wmstool-radio-input"
        type="radio"
        value="4"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-more.md correctly 1`] = `
<div
  class="wmstool-radio-group"
>
  <label
    class="wmstool-radio-wrapper wmstool-radio-wrapper-checked"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="wmstool-radio wmstool-radio-checked"
    >
      <input
        checked=""
        class="wmstool-radio-input"
        type="radio"
        value="1"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      Option A
    </span>
  </label>
  <label
    class="wmstool-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="wmstool-radio"
    >
      <input
        class="wmstool-radio-input"
        type="radio"
        value="2"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      Option B
    </span>
  </label>
  <label
    class="wmstool-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="wmstool-radio"
    >
      <input
        class="wmstool-radio-input"
        type="radio"
        value="3"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      Option C
    </span>
  </label>
  <label
    class="wmstool-radio-wrapper"
    style="display:block;height:30px;line-height:30px"
  >
    <span
      class="wmstool-radio"
    >
      <input
        class="wmstool-radio-input"
        type="radio"
        value="4"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      More...
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-options.md correctly 1`] = `
<div>
  <div
    class="wmstool-radio-group"
  >
    <label
      class="wmstool-radio-wrapper wmstool-radio-wrapper-checked"
    >
      <span
        class="wmstool-radio wmstool-radio-checked"
      >
        <input
          checked=""
          class="wmstool-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="wmstool-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="wmstool-radio-wrapper"
    >
      <span
        class="wmstool-radio"
      >
        <input
          class="wmstool-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="wmstool-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="wmstool-radio-wrapper"
    >
      <span
        class="wmstool-radio"
      >
        <input
          class="wmstool-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="wmstool-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    class="wmstool-radio-group"
  >
    <label
      class="wmstool-radio-wrapper wmstool-radio-wrapper-checked"
    >
      <span
        class="wmstool-radio wmstool-radio-checked"
      >
        <input
          checked=""
          class="wmstool-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="wmstool-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="wmstool-radio-wrapper"
    >
      <span
        class="wmstool-radio"
      >
        <input
          class="wmstool-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="wmstool-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="wmstool-radio-wrapper"
    >
      <span
        class="wmstool-radio"
      >
        <input
          class="wmstool-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="wmstool-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
  <div
    class="wmstool-radio-group"
  >
    <label
      class="wmstool-radio-wrapper wmstool-radio-wrapper-checked"
    >
      <span
        class="wmstool-radio wmstool-radio-checked"
      >
        <input
          checked=""
          class="wmstool-radio-input"
          type="radio"
          value="Apple"
        />
        <span
          class="wmstool-radio-inner"
        />
      </span>
      <span>
        Apple
      </span>
    </label>
    <label
      class="wmstool-radio-wrapper"
    >
      <span
        class="wmstool-radio"
      >
        <input
          class="wmstool-radio-input"
          type="radio"
          value="Pear"
        />
        <span
          class="wmstool-radio-inner"
        />
      </span>
      <span>
        Pear
      </span>
    </label>
    <label
      class="wmstool-radio-wrapper"
    >
      <span
        class="wmstool-radio"
      >
        <input
          class="wmstool-radio-input"
          type="radio"
          value="Orange"
        />
        <span
          class="wmstool-radio-inner"
        />
      </span>
      <span>
        Orange
      </span>
    </label>
  </div>
</div>
`;

exports[`renders ./components/radio/demo/radiogroup-with-name.md correctly 1`] = `
<div
  class="wmstool-radio-group"
>
  <label
    class="wmstool-radio-wrapper wmstool-radio-wrapper-checked"
  >
    <span
      class="wmstool-radio wmstool-radio-checked"
    >
      <input
        checked=""
        class="wmstool-radio-input"
        name="radiogroup"
        type="radio"
        value="1"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      A
    </span>
  </label>
  <label
    class="wmstool-radio-wrapper"
  >
    <span
      class="wmstool-radio"
    >
      <input
        class="wmstool-radio-input"
        name="radiogroup"
        type="radio"
        value="2"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      B
    </span>
  </label>
  <label
    class="wmstool-radio-wrapper"
  >
    <span
      class="wmstool-radio"
    >
      <input
        class="wmstool-radio-input"
        name="radiogroup"
        type="radio"
        value="3"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      C
    </span>
  </label>
  <label
    class="wmstool-radio-wrapper"
  >
    <span
      class="wmstool-radio"
    >
      <input
        class="wmstool-radio-input"
        name="radiogroup"
        type="radio"
        value="4"
      />
      <span
        class="wmstool-radio-inner"
      />
    </span>
    <span>
      D
    </span>
  </label>
</div>
`;

exports[`renders ./components/radio/demo/size.md correctly 1`] = `
<div>
  <div>
    <div
      class="wmstool-radio-group wmstool-radio-group-large"
    >
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-checked"
        >
          <input
            checked=""
            class="wmstool-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="wmstool-radio-group"
    >
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-checked"
        >
          <input
            checked=""
            class="wmstool-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
  <div
    style="margin-top:16px"
  >
    <div
      class="wmstool-radio-group wmstool-radio-group-small"
    >
      <label
        class="wmstool-radio-button-wrapper wmstool-radio-button-wrapper-checked"
      >
        <span
          class="wmstool-radio-button wmstool-radio-button-checked"
        >
          <input
            checked=""
            class="wmstool-radio-button-input"
            type="radio"
            value="a"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Hangzhou
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="b"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Shanghai
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="c"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Beijing
        </span>
      </label>
      <label
        class="wmstool-radio-button-wrapper"
      >
        <span
          class="wmstool-radio-button"
        >
          <input
            class="wmstool-radio-button-input"
            type="radio"
            value="d"
          />
          <span
            class="wmstool-radio-button-inner"
          />
        </span>
        <span>
          Chengdu
        </span>
      </label>
    </div>
  </div>
</div>
`;
